# rCore

./: CMakeLists.txt  test_rcore.cpp
include/rCore/: EigenMatrixBasePlugin.h  Interpolator.h  link_pragmas.h  rxInterpolator.h
include/rMath/: EigenMatrixBasePlugin.h  EigenMatrixPlugin.h  EigenTransformPlugin.h  rMath.h
src/: CMakeLists.txt  HTransformInterpolator.cpp  HTransformInterpolator.h  Interpolator.cpp  OrientationInterpolator.cpp  OrientationInterpolator.h  VInterpolator.cpp  VInterpolator.h  rxHTransformInterpolator.cpp  rxHTransformInterpolator.h  rxInterpolator.cpp  rxInterpolator.h  rxOrientationInterpolator.cpp  rxOrientationInterpolator.h  rxTrapezoidInterpolator.cpp  rxTrapezoidInterpolator.h  rxVInterpolator.cpp  rxVInterpolator.h  rxVTrapezoidInterpolator.cpp  rxVTrapezoidInterpolator.h
